# Network-Security

./: .dockerignore  .gitignore  Docker-compose.yml  Dockerfile  README.md  app.py  etl_pipeline.py  main.py  pyproject.toml  steps.txt  test_mongodb.py
.github/workflows/: main.yml
Artifacts/01_25_2025_14_10_23/data_ingestion/ingested/: test.csv  train.csv
Artifacts/01_25_2025_14_10_23/data_validation/drift_report/: report.yaml
Final Model/: preprocessor.pkl
Notebooks/: exp.ipynb
final_model/: preprocessor.pkl
networksecurity/cloud/: s3_syncer.py
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  hyperparameter.py  model_trainer.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
networksecurity/utils/ml_utils/metric/: classification_metric.py
networksecurity/utils/ml_utils/model/: estimator.py
